# memconstruct

./: Cargo.toml  README.md  example.md  example_file.rs
memconstruct/: Cargo.toml
memconstruct/examples/: basic_handwritten.rs  big_array_crashes.rs  big_array_memconstruct.rs  handwritten_comparison.rs
memconstruct/src/: alloc.rs  array.rs  heapconstruct.rs  lib.rs  primitive.rs  util.rs
memconstruct/tests/: basic_boxed.rs  general_tests.rs
memconstruct_macros/: Cargo.toml
memconstruct_macros/src/: lib.rs
