[package]
name = "memconstruct"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/DrSloth/memconstruct"
license = "MIT"
description = "Create values directly anywhere in memory. Create values directly on the heap."
keywords = ["memory", "optimisation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memconstruct_macros = { path = "../memconstruct_macros", version = "0.1.0" }

