[package]
name = "memconstruct_macros"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/DrSloth/memconstruct"
license = "MIT"
description = "Create values directly anywhere in memory. Create values directly on the heap."
keywords = ["memory", "optimisation", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = { version = "2.0.0", features = ["extra-traits", "full"] }

